<resources>
    <string name="app_name">SampleApp</string>
    <string name="main_title">Test Actions:</string>

    <string name="linear_layout">androidx.recyclerview.widget.LinearLayoutManager</string>

    <string name="header_login_no_logged_in">No account is current logged in.</string>
    <string name="header_login_type">Logged in with type: %s</string>
    <string name="header_api_account">Account:</string>
    <string name="header_api_contributions">Contributions:</string>
    <string name="header_api_message">Message:</string>
    <string name="header_api_multis">Multis:</string>
    <string name="header_api_subreddit">Subreddit:</string>
    <string name="header_api_users">Users:</string>
    <string name="header_api_wiki">Wiki:</string>

    <string name="bttn_back_to_login">Back to login</string>
    <string name="bttn_app_login">Installed app login</string>
    <string name="bttn_userless">Userless login</string>
    <string name="bttn_apis">APIs</string>
    <string name="bttn_me">Me</string>
    <string name="bttn_my_blocked">My Blocked</string>
    <string name="bttn_my_info">My Info</string>
    <string name="bttn_my_friends">My Friends</string>
    <string name="bttn_my_karma">My Karma</string>
    <string name="bttn_my_prefs">My Prefs</string>
    <string name="bttn_my_trophies">My Trophies</string>
    <string name="bttn_my_subreddits">My Subreddits</string>
    <string name="bttn_overview">Overview</string>
    <string name="bttn_submitted">Submitted</string>
    <string name="bttn_saved">Saved</string>
    <string name="bttn_hidden">Hidden</string>
    <string name="bttn_upvoted">Upvoted</string>
    <string name="bttn_downvoted">Downvoted</string>
    <string name="bttn_gilded">Gilded</string>
    <string name="bttn_subreddit_banned">Banned</string>
    <string name="bttn_subreddit_muted">Muted</string>
    <string name="bttn_subreddit_rules">Rules</string>
    <string name="bttn_subreddit_flairs">Flairs</string>
    <string name="bttn_subreddit_wikibanned">Wiki Banned</string>
    <string name="bttn_subreddit_contributors">Contributors</string>
    <string name="bttn_subreddit_wikicontributors">Wiki Contributors</string>
    <string name="bttn_subreddit_moderators">Moderators</string>
    <string name="bttn_inbox">Inbox</string>
    <string name="bttn_messages">Messages</string>
    <string name="bttn_comment_replies">Comments Replies</string>
    <string name="bttn_load_more">Load More</string>
    <string name="bttn_self_replies">Self Replies</string>
    <string name="bttn_sent">Sent</string>
    <string name="bttn_my_multis">My Multis</string>
    <string name="bttn_redditor_multis">Redditor Multis</string>

    <string name="bttn_user">User</string>
    <string name="bttn_user_info">User Info</string>
    <string name="bttn_user_trophies">User Trophies</string>
    <string name="bttn_user_search">User Search</string>
    <string name="bttn_subreddit">Subreddit</string>
    <string name="bttn_subreddits">Subreddits</string>
    <string name="bttn_submission">Submission</string>
    <string name="bttn_submissions">Submissions</string>
    <string name="bttn_submissions_commons">Common submissions</string>
    <string name="bttn_submissions_search">Submissions Search</string>
    <string name="bttn_submissions_filter">Submissions Filter</string>
    <string name="bttn_multi_submissions">Multi Submissions</string>
    <string name="bttn_multi_get_desc">Get Desc</string>
    <string name="bttn_multi_set_desc">Set Desc</string>
    <string name="bttn_multi_get_sub">Get Sub</string>
    <string name="bttn_multi_add_sub">Add Sub</string>
    <string name="bttn_multi_del_sub">Del Sub</string>
    <string name="bttn_multi">Multi</string>
    <string name="bttn_del_multi">Del Multi</string>
    <string name="bttn_multireddit">Multireddit</string>
    <string name="bttn_trending">Trending</string>
    <string name="bttn_subreddit_search">Subreddit Search</string>
    <string name="bttn_submit">Submit</string>
    <string name="bttn_submit_media">Submit Media</string>
    <string name="bttn_submit_radio_self">Self Post</string>
    <string name="bttn_submit_radio_link">Link Post</string>
    <string name="bttn_comment">Comment</string>
    <string name="bttn_comments">Comments</string>
    <string name="bttn_wiki">Wiki</string>
    <string name="bttn_wiki_pages">Wiki Pages</string>
    <string name="bttn_wiki_revision">Wiki Revision</string>
    <string name="bttn_wiki_revisions">Wiki Revisions</string>
    <string name="bttn_rules">Rules</string>
    <string name="edit_insert_user">Insert user:</string>
    <string name="edit_insert_username">Insert username:</string>
    <string name="edit_insert_subreddit">Insert subreddit:</string>
    <string name="edit_insert_submission_id">Insert submission id:</string>
    <string name="edit_insert_query">Insert query:</string>
    <string name="edit_insert_comment_id">Insert comment id:</string>
    <string name="edit_insert_title">Insert title:</string>
    <string name="edit_insert_text_or_link">Insert text or link:</string>
    <string name="edit_comment_reply">Comment Reply:</string>
    <string name="check_sendreplies">Send Replies</string>
    <string name="check_isnsfw">Is Nsfw</string>
    <string name="check_isspoiler">Is Spoiler</string>
    <string name="check_isoc">Is Original Content</string>
    <string name="check_starts_with">Starts with:</string>
    <string name="check_allsubs">All Subs:</string>
    <string name="check_disable_legacy_encoding">Disable legacy encoding</string>
    <string name="bttn_search_user">Search</string>
    <string name="bttn_ok">OK</string>
    <string name="bttn_read">Read</string>
    <string name="bttn_unread">Unread</string>
    <string name="bttn_upvote">Upvote</string>
    <string name="bttn_none">None</string>
    <string name="bttn_downvote">Downvote</string>
    <string name="bttn_save">Save</string>
    <string name="bttn_hide">Hide</string>
    <string name="bttn_lock">Lock</string>
    <string name="bttn_subscribe">Subscribe</string>
    <string name="bttn_reply">Reply</string>
    <string name="bttn_upload">Upload</string>
    <string name="bttn_upload_images">Upload Images</string>
    <string name="load_image">Load Image</string>
    <string name="image_to_upload">image to upload</string>
    <string name="bttn_settings">Settings</string>
    <string name="no_items">No items to show.</string>

    <string name="sorting_hot">Hot</string>
    <string name="sorting_best">Best</string>
    <string name="sorting_new">New</string>
    <string name="sorting_rising">Rising</string>
    <string name="sorting_controversial">Controversial</string>
    <string name="sorting_top">Top</string>
    <string name="sorting_confidence">Confidence</string>
    <string name="sorting_old">Old</string>
    <string name="sorting_random">Random</string>
    <string name="sorting_qa">Q/A</string>
    <string name="sorting_live">Live</string>

    <string name="timeperiod_hour">Hour</string>
    <string name="timeperiod_day">Day</string>
    <string name="timeperiod_week">Week</string>
    <string name="timeperiod_month">Month</string>
    <string name="timeperiod_year">Year</string>
    <string name="timeperiod_all">All</string>
    <string name="bttn_user_moderated_subs">User Moderated Subs</string>
    <string name="bttn_search">Search</string>

</resources>
