<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group_sorting"
           android:menuCategory="container">

        <item android:id="@+id/item_sorting_hot"
              app:showAsAction="never"
              android:title="@string/sorting_hot"
        />

        <item android:id="@+id/item_sorting_best"
              app:showAsAction="never"
              android:title="@string/sorting_best"
        />

        <item android:id="@+id/item_sorting_new"
              app:showAsAction="never"
              android:title="@string/sorting_new"
        />

        <item android:id="@+id/item_sorting_rising"
              app:showAsAction="never"
              android:title="@string/sorting_rising"
        />

        <item android:id="@+id/item_sorting_controversial"
              app:showAsAction="never"
              android:title="@string/sorting_controversial"
        />

        <item android:id="@+id/item_sorting_top"
              app:showAsAction="never"
              android:title="@string/sorting_top"
        />

    </group>

    <group android:id="@+id/group_timeperiod"
           android:menuCategory="container">

        <item android:id="@+id/item_timeperiod_hour"
              app:showAsAction="never"
              android:title="@string/timeperiod_hour"
        />

        <item android:id="@+id/item_timeperiod_day"
              app:showAsAction="never"
              android:title="@string/timeperiod_day"
        />

        <item android:id="@+id/item_timeperiod_week"
              app:showAsAction="never"
              android:title="@string/timeperiod_week"
        />

        <item android:id="@+id/item_timeperiod_month"
              app:showAsAction="never"
              android:title="@string/timeperiod_month"
        />

        <item android:id="@+id/item_timeperiod_year"
              app:showAsAction="never"
              android:title="@string/timeperiod_year"
        />

        <item android:id="@+id/item_timeperiod_all"
              app:showAsAction="never"
              android:title="@string/timeperiod_all"
        />

    </group>
</menu>