<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="18sp"
                    android:text="@string/main_title" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_back_to_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_back_to_login" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_apis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_apis" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_me" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_self_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_my_info" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_inbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_inbox" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_my_subreddits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_my_subreddits" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_my_trophies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_my_trophies" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_user" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_user_info" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_user_trophies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_user_trophies" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_user_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_user_search" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_user_moderated_subs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_user_moderated_subs" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_subreddit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_subreddit" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submission"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submission" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submissions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submissions" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submissions_commons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submissions_commons" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submissions_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submissions_search" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submissions_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submissions_filter" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_subreddit_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_subreddit_search" />

            <!--Button
                    android:id="@+id/bttn_multi_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_multi_search" /-->

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submit" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_submit_media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_submit_media" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_comment" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_comments" />

            <!--com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_poll_vote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_poll_vote" /-->

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_wiki"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_wiki" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_wiki_pages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_wiki_pages" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_rules" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_upload_images"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_upload_images" />

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/bttn_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/bttn_settings" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>