<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/header_api_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/header_api_account"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/bttn_me"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_me"
            app:layout_constraintTop_toBottomOf="@id/header_api_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bttn_my_blocked"
            />

    <Button
            android:id="@+id/bttn_my_blocked"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_my_blocked"
            app:layout_constraintTop_toBottomOf="@id/header_api_account"
            app:layout_constraintStart_toEndOf="@id/bttn_me"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/bttn_my_friends"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_my_friends"
            app:layout_constraintTop_toBottomOf="@id/bttn_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bttn_my_karma"
            />

    <Button
            android:id="@+id/bttn_my_karma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_my_karma"
            app:layout_constraintTop_toBottomOf="@id/bttn_my_blocked"
            app:layout_constraintStart_toEndOf="@id/bttn_my_friends"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
            android:id="@+id/bttn_my_prefs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_my_prefs"
            app:layout_constraintTop_toBottomOf="@id/bttn_my_friends"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/bttn_my_trophies"
            />

    <Button
            android:id="@+id/bttn_my_trophies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/bttn_my_trophies"
            app:layout_constraintTop_toBottomOf="@id/bttn_my_karma"
            app:layout_constraintStart_toEndOf="@id/bttn_my_prefs"
            app:layout_constraintEnd_toEndOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>